--- a/src/main/resources/templates/adminWallet.html
+++ b/src/main/resources/templates/adminWallet.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Wallets - SwapTicket</title>
     <link rel="stylesheet" th:href="@{/css/adminWallet.css}" />
+    <link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 	<style type="text/css">
 	body {
