--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Login - SwapTicket</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
     
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -631,7 +632,7 @@
         <div class="login-container">
             <div class="login-header">
                 <div class="login-logo">
-                    <img src="https://img.icons8.com/color/48/train.png" alt="Train Icon">
+                    <img src="/docs/swaplogo.png" alt="logo" height="50px">
                     <h2>SwapTicket</h2>
                 </div>
                 <h1>Welcome Back</h1>
