--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Create Your Account - SwapTicket</title>
-
+	<link rel="icon" href="https://res.cloudinary.com/dgrxmavho/image/upload/v1749496815/swaplogo_zzganr.png" type="image/png">
+	
     <!-- Google Font -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 
@@ -313,7 +314,7 @@
     <div class="register-container animate__animated animate__fadeInUp">
         <div class="logo-header">
             <div class="logo">
-                <img src="https://img.icons8.com/color/48/train.png" alt="Train Icon">
+                <img src="/docs/swaplogo.png" alt="logo" height="50px">
                 <h1>SwapTicket</h1>
             </div>
             <h2 class="register-title">Create Your Account</h2>
